# Fullmedia.Alchemist

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  pyproject.toml
docs/: ARCHITECTURE.md  BUILD_AND_RELEASE.md  CONVERSION_ENGINE.md  CURRENT_STATUS.md  DECISIONS.md  DEVELOPMENT_CHECKLIST.md  DEV_LOG.md  NAMING_RULES.md  NEXT_STEPS.md  OUTPUT_PRESETS.md  PROFILE_IMPORT_EXPORT.md  PROFILE_SCHEMA.md  PROJECT_BRIEF.md  REFERENCE_ONLY_REPOS.md  UI_UX_SPEC.md  VERSIONING.md  WEBSITE_BACKGROUND_PROFILE.md
profiles/defaults/alchemist_profiles/: website_background.fma-profile.json
profiles/defaults/output_presets/: website_av1_webm_ladder.fma-output-preset.json  website_h264_mp4_fallback_ladder.fma-output-preset.json  website_vp9_webm_fallback_ladder.fma-output-preset.json  website_webp_poster.fma-output-preset.json
scripts/: build_portable.bat  dev_run.bat
src/fullmedia_alchemist/: __init__.py  __main__.py  main.py  version.py
src/fullmedia_alchemist/core/: __init__.py  tool_registry.py
src/fullmedia_alchemist/profiles/: __init__.py  default_loader.py  models.py
src/fullmedia_alchemist/ui/: __init__.py  main_window.py
src/fullmedia_alchemist/ui/panels/: __init__.py  inspector_panel.py  profile_panel.py  progress_panel.py  queue_panel.py
src/fullmedia_alchemist/ui/widgets/: __init__.py  collapsible_section.py  drop_zone.py  footer_status_bar.py  tool_button.py
tests/: test_default_loader.py  test_version.py
